# mcp_example

./: README.md  pyproject.toml  test.html
src/: client.py
src/servers/: calculator_server.py
tests/: test_calculator_client.py  test_openai_connection.py
